# quaerere-base-common

./: VERSION  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
docs/: api.rst  conf.py  index.rst
quaerere_base_common/: __init__.py  schema.py
tests/: test_schema.py
