[bumpversion]
current_version = 0.1.0.dev0
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<micro>\d+)((?P<pre_release>a|b|rc)(?P<pre_release_num>\d+))?(\.dev(?P<dev_num>\d+))?
serialize = 
	{major}.{minor}.{micro}{pre_release}{pre_release_num}.dev{dev_num}
	{major}.{minor}.{micro}.dev{dev_num}
	{major}.{minor}.{micro}{pre_release}{pre_release_num}
	{major}.{minor}.{micro}

[metadata]
author = Caitlyn O'Hanna
author_email = ravenoak@virtualxistenz.com
classifiers = 
	Development Status :: 2 - Pre-Alpha
	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
license_file = LICENSE.txt
url = https://github.com/QuaererePlatform/quaerere-base-common

[aliases]
test = pytest

[bdist_wheel]
universal = True

[options]
python_requires = ~= 3.6

[bumpversion:file:VERSION]
search = '{current_version}'
replace = '{new_version}'

[bumpversion:file:quaerere_base_common/__init__.py]
search = '{current_version}'
replace = '{new_version}'

[bumpversion:part:pre_release]
optional_value = b
values = 
	a
	b
	rc

[build_sphinx]

[tool:pytest]
testpaths = tests
addopts = --cov=quaerere_base_common --flake8

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = True

[coverage:html]

[coverage:xml]

